// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<div
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</div>
`;

exports[`composition hook should return with Switch props 1`] = `
Object {
  "aria-describedby": "id-test",
  "aria-invalid": false,
  "aria-required": undefined,
  "children": <React.Fragment>
    .emotion-0 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-0:focus {
  outline: none;
}

.emotion-0+.bb-SwitchIcon::before {
  background: #000000;
  content: '';
  border-radius: 100%;
  border: 1px solid #000000;
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-0[disabled]+.bb-SwitchIcon {
  background-color: #000000;
  box-shadow: unset;
}

.emotion-0[disabled]+.bb-SwitchIcon::before {
  background: #000000;
}

.emotion-0:focus+.bb-SwitchIcon {
  border-color: #000000;
  box-shadow: #000000 0px 0px 0px 3px!important;
}

.emotion-0:not([disabled]):checked+.bb-SwitchIcon {
  border-color: #000000;
  background-color: #000000;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-0:checked+.bb-SwitchIcon {
  background-color: #000000;
  border-color: #000000;
}

.emotion-0:checked+.bb-SwitchIcon::before {
  border-color: #000000;
  left: 1.25em;
}

.emotion-0[disabled]:checked+.bb-SwitchIcon::before {
  border-color: #000000;
}

<Box
      className="emotion-0 bb-SwitchHiddenInput"
      id="id-test"
      type="checkbox"
      use="input"
    />
    .emotion-0 {
  background-color: #000000;
  border: 1px solid #000000;
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<Box
      className="emotion-0 bb-SwitchIcon"
    />
  </React.Fragment>,
  "className": "css-i5mf5v css-63it0p css-1qnz8fc bb-Box bb-Switch",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

<div
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 test bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-4 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-4 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`overrides Switch.HiddenInput.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`overrides Switch.Icon.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8 {
  background-color: var(--bb-palette-red, #ff0000);
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`overrides Switch.Label.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`overrides Switch.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should assign a ref 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should assign a ref via switchRef 1`] = `
.emotion-0 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-0:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-2:focus {
  outline: none;
}

.emotion-2+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-2[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-2[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-2:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-2:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-2:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-2:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-2[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

<input
  class="emotion-0 emotion-1 emotion-2 bb-SwitchHiddenInput bb-Box"
  id="id-test"
  type="checkbox"
/>
`;

exports[`props should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly for danger state 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon {
  border-color: var(--bb-palette-danger, #000000);
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5:not(:checked)+.bb-SwitchIcon {
  box-shadow: var(--bb-palette-dangerTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="true"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly for success state 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon {
  border-color: var(--bb-palette-success, #000000);
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5:not(:checked)+.bb-SwitchIcon {
  box-shadow: var(--bb-palette-successTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly for warning state 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon {
  border-color: var(--bb-palette-warning, #000000);
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5:not(:checked)+.bb-SwitchIcon {
  box-shadow: var(--bb-palette-warningTint, #000000) 0px 0px 0px 3px!important;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-2 {
  background-color: var(--bb-palette-primary, #000000)!important;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-4 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-4 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with checked 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    checked=""
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with defaultChecked 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    checked=""
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with disabled 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    disabled=""
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with isRequired 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  aria-required="true"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with label 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-9 {
  display: block;
  font-weight: 500;
  font-size: 16px;
  line-height: 18px;
  padding: 0.05px 0;
}

.emotion-9::before {
  content: '';
  margin-top: -0.2312em;
  display: block;
  height: 0;
}

.emotion-9::after {
  content: '';
  margin-bottom: -0.1921em;
  display: block;
  height: 0;
}

.emotion-9:not(:last-child) {
  margin-bottom: 6.671875px;
}

.emotion-11 {
  margin-left: 0.5rem!important;
}

.emotion-12.emotion-12 {
  font-weight: 400;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
  <span
    class="emotion-9 emotion-1 emotion-11 emotion-12 bb-SwitchLabel bb-Box bb-Label"
    for="id-test"
    id="id-test"
  >
    Hello world
  </span>
</label>
`;

exports[`props should render correctly with name 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    name="checkboxRocks"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`props should render correctly with value 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
    value="checkboxValue"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`theming Switch.HiddenInput.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`theming Switch.Icon.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

.emotion-8 {
  background-color: var(--bb-palette-red, #ff0000);
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`theming Switch.Label.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;

exports[`theming Switch.base should render correctly 1`] = `
.emotion-0.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

.emotion-5 {
  height: 1em;
  width: 1em;
  overflow: hidden;
  position: absolute;
  opacity: 0;
}

.emotion-5:focus {
  outline: none;
}

.emotion-5+.bb-SwitchIcon::before {
  background: var(--bb-palette-default, #000000);
  content: '';
  border-radius: 100%;
  border: 1px solid var(--bb-palette-gray100, #000000);
  height: 1em;
  width: 1em;
  top: 0.2em;
  left: 0.2em;
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
  position: absolute;
}

.emotion-5[disabled]+.bb-SwitchIcon {
  background-color: var(--bb-palette-white700, #000000);
  box-shadow: unset;
}

.emotion-5[disabled]+.bb-SwitchIcon::before {
  background: var(--bb-palette-white700, #000000);
}

.emotion-5:focus+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  box-shadow: var(--bb-palette-primary100, #000000) 0px 0px 0px 3px!important;
}

.emotion-5:not([disabled]):checked+.bb-SwitchIcon {
  border-color: var(--bb-palette-primary, #000000);
  background-color: var(--bb-palette-primary, #000000);
  -webkit-transition: all ease 0.2s;
  transition: all ease 0.2s;
}

.emotion-5:checked+.bb-SwitchIcon {
  background-color: var(--bb-palette-primary100, #000000);
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-5:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary, #000000);
  left: 1.25em;
}

.emotion-5[disabled]:checked+.bb-SwitchIcon::before {
  border-color: var(--bb-palette-primary100, #000000);
}

.emotion-8 {
  background-color: var(--bb-palette-default, #000000);
  border: 1px solid var(--bb-palette-gray100, #000000);
  border-radius: 1em;
  height: 1.5em;
  position: relative;
  width: 2.5em;
  -webkit-transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
  transition: box-shadow 0.1s ease-in-out 0s,border-color 0.1s,background-color 0.1s;
}

<label
  aria-describedby="id-test"
  aria-invalid="false"
  class="emotion-0 emotion-1 emotion-2 bb-Box bb-Switch"
>
  <input
    class="emotion-1 emotion-2 emotion-5 bb-SwitchHiddenInput bb-Box"
    id="id-test"
    type="checkbox"
  />
  <div
    class="emotion-1 emotion-2 emotion-8 bb-SwitchIcon bb-Box"
  />
</label>
`;
